Logtalk/examples/errors/noninstdir.lgt

:- object(noninstdir).


	:- Public(predicate/0).


:- end_object.
